@@ -1,3 +1,11 @@
+Sun Feb 18 2007 Sergey Sytchewoj <brumal at users.sourceforge.net>
+	- Advanced thread_pool size adjustment implemented
+
+Sat Feb 17 2007 Sergey Sytchewoj <brumal at users.sourceforge.net>
+	- Created my private branch
+	- Linux-specific thread functions moved into pthreads.c/.h
+	- r44 fixes ported from trunk
+
 Fri Feb 16 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
 	- Applied a patch from Helc`Ainu to provide Linux port with thread
 	  pool support.
